# price-tracker

./: .gitignore  Makefile  README.md  pyproject.toml
src/: config.py  data_utils.py  email_utils.py  encrypt.py  main.py  parser.py  scraper.py  tracker.py  utils.py
src/utils/: data_utils.py  email_utils.py
tests/: test_data_utils.py  test_email_utils.py  test_encrypt.py  test_utils.py
