[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "price-tracker"
version = "0.1.0"
description = "A web scraper to track product prices"
authors = ["Adrien Lynch <adriienlynch@gmail.com>"]

packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = ">=3.9" 
python-dotenv = ">1.0.0"

requests = ">2.28.1"
beautifulsoup4 = ">4.11.1"
lxml = ">4.9.0"
selenium = ">4.15.0"
webdriver-manager = ">4.0.0"
cryptography = ">41.0.0"
twilio = ">7.12.0"
flake8 = "^7.1.1"

google-auth = ">2.0.0"
google-auth-oauthlib = ">1.0.0"
google-auth-httplib2 = ">0.1.0"
google-api-python-client = ">2.0.0"
pytz = "^2025.1"
pandas = "^2.2.3"
pytest = "^8.3.4"
undetected-chromedriver = "^3.5.5"
selenium-stealth = "^1.0.6"
rapidfuzz = "^3.12.1"

[tool.poetry.group.dev.dependencies]
pytest = ">7.0"

